--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,6 +7,7 @@
       <div class="trigger-child">
         <span class="nav-link"><a href="/work/">work</a></span>
         <span class="nav-link"><a href="/notes/">notes</a></span>
+        <span class="nav-link"><a href="/archive/">archive</a></span>
       </div>
     </div>
   </nav>
