--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,5 @@
-
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro);
-
-/* Basic styling */
 
 * {
   box-sizing: border-box;
@@ -12,18 +9,9 @@
 }
 
 html {
-/*  font-size: 14px;
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
   font-family: "Source Sans Pro", sans-serif;
   font-size: 14pt;
   line-height: 1.5;
-}
-
-@media(min-width: 480px) {
-  html {
-    /*font-size: 16px;*/
-    font-size: 14pt;
-  }
 }
 
 body {
@@ -36,78 +24,42 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: 1rem;
   font-weight: bold;
-  /*text-decoration: underline;*/
   line-height: 1.25;
   font-size: 1rem;
 }
 
-h1 {
-  margin-top: 1.25rem;
-  font-size: 1.5rem;
-}
+h1 { margin-top: 1.25rem; font-size: 1.5rem; }
+h2 { margin-top: 1.25rem; font-size: 1.1rem; }
 
-h2 {
-  margin-top: 1.25rem;
-  font-size: 1.1rem;
-}
+p { margin-bottom: 1rem; }
 
-p {
-  margin-top: 0;
+strong { font-weight: bold; }
+em { font-style: italic; }
+
+ul, ol {
   margin-bottom: 1rem;
-}
-
-strong {
-  font-weight: bold;
-}
-
-em {
-  font-style: italic;
-}
-
-ul {
   list-style-position: inside;
   padding-left: 1rem;
-}
-
-ol {
-  margin-left: 1rem;
-}
-
-li > ul {
-  padding-left: 2rem;
 }
 
 ul li {
   list-style-type: none;
 }
 
-ul, ol {
-  margin-bottom: 1rem;
-}
-
-ul ul, ol ul, ul ol, ol ol {
-  margin-bottom: inherit;
-}
-
 ul li:before {
-  content: "\2013  "; /* note: extra space needed because first is consumed by css parser */
+  content: "\2013  ";
   position: absolute;
   margin-left: -1rem;
 }
 
-ul.double-spaced li {
-  margin-top: 1rem;
-}
-
 pre, code {
-  font-family: "Source Code Pro", "Menlo", "DejaVu Sans Mono", "Lucida Console", monospace;
+  font-family: "Source Code Pro", monospace;
 }
 
 code {
   background-color: rgba(27,31,35,.05);
   border-radius: 3px;
   padding: 0 0.2rem;
-  /*font-size: 0.9em;*/
   font-size: 12pt;
 }
 
@@ -116,7 +68,6 @@ pre {
   margin: 1rem;
   padding: 0.5rem 0.7rem;
   border: 1px dashed #444;
-  /*font-size: .8rem;*/
   font-size: 11pt;
   overflow-x: auto;
 }
@@ -140,78 +91,20 @@ a:hover {
 
 img, video {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   border-radius: 5px;
   max-width: 100%;
   max-height: 80vh;
 }
 
-video {
-  margin-bottom: 1rem;
-}
+video { margin-bottom: 1rem; }
 
-summary {
-  outline: none;
-  user-select: none;
-}
-
-hr {
-  position: relative;
-  margin: 1.5rem 0;
-  border: 0;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #fff;
-}
-
-/* Classes */
-
-.title {
-  font-size: 2rem;
-}
-
-.subtitle {
-  font-size: 1.5rem;
-  margin-left: 1rem;
-}
-
-.small {
-  font-size: 0.75rem;
-}
-
-.small p {
-  margin-bottom: 0;
-}
-
-.center {
-  text-align: center;
-}
-
-.gap {
-  margin-top: 4rem;
-  margin-bottom: 4rem;
-}
-
-.accent {
-  color: #8c0038;
-}
-
-.youtube-wrapper {
-  position: relative;
-  height: 0;
-  margin-bottom: 1rem;
-}
-
-.youtube-wrapper iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 0;
-}
-
-/* Elements */
+.title { font-size: 2rem; }
+.subtitle { font-size: 1.5rem; margin-left: 1rem; }
+.small { font-size: 0.75rem; }
+.center { text-align: center; }
+.gap { margin-top: 4rem; margin-bottom: 4rem; }
+.accent { color: #8c0038; }
 
 #content {
   max-width: 35rem;
@@ -220,15 +113,9 @@ hr {
   padding: 1rem 1rem 0 1rem;
 }
 
-.demo {
-  margin-top: 2em;
-  margin-bottom: 2em;
-}
-
 #nav-bg {
-  margin: 0;
   padding: 0.25rem 1rem;
-  font-family: "Source Code Pro", "Menlo", "DejaVu Sans Mono", "Lucida Console", monospace;
+  font-family: "Source Code Pro", monospace;
   background: #54008c;
   color: #fff;
 }
@@ -249,29 +136,17 @@ hr {
   background-color: #fff;
 }
 
-a#logo {
-  color: #f2deff;
-}
+a#logo { color: #f2deff; }
+a:hover#logo { color: #000; }
 
-a:hover#logo {
-  color: #000;
-}
+/* --- Mobile nav behavior --- */
 
-#menu-icon {
-  display: none;
-}
-
-.trigger {
-  display: none;
-}
-
-input[type=checkbox]:checked ~ .trigger {
-  display:block;
-  margin: auto;
-}
+#menu-icon { display: none; }
 
 .menu-label {
-  font-family: "Source Code Pro", "Menlo", "DejaVu Sans Mono", "Lucida Console", monospace;
+  display: block;
+  cursor: pointer;
+  font-family: "Source Code Pro", monospace;
 }
 
 input[type=checkbox] ~ .menu-label:after {
@@ -282,25 +157,33 @@ input[type=checkbox]:checked ~ .menu-label:after {
   content: "(-)";
 }
 
-.nav-link {
+/* Hide nav links until menu toggled */
+.trigger {
+  display: none;
+}
+
+input[type=checkbox]:checked ~ .trigger {
   display: block;
+  margin: auto;
 }
 
 .trigger-child {
-  display: inline-block;
-  text-align: initial;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  text-align: center;
+}
+
+.nav-link {
+  display: block;
 }
 
 .nav-link:before {
   content: "- ";
 }
 
-/* in terms of our fixed-width layout; if smaller than this, we want to
- * collapse the menu */
 @media (min-width: 40rem) {
-  .menu-label {
-    display: none;
-  }
+  .menu-label { display: none; }
 
   .trigger {
     display: inline;
@@ -325,42 +208,18 @@ input[type=checkbox]:checked ~ .menu-label:after {
   }
 }
 
+/* Dark mode */
+
 @media (prefers-color-scheme: dark) {
-
-    body {
-        background-color: #303030;
-        color: #ddd
-    }
-
-    a {
-      color: #66D9EF;
-      /*color: #A6E22E;*/
-      text-decoration: none;
-    }
-
-    a:hover {
-      color: #000;
-      background-color: #66D9EF;
-      text-decoration: none;
-    }
-
-    h1, h2, h3, h4, h5, h6 {
-        color: #eee;
-      }
-
-    #nav-bg, a#logo, #top-nav a {
-      background-color: #A6E22E;
-      color: #202020;
-    }
-
-    a:hover > code  {
-        background-color: #66D9EF;
-    }
-
-    .accent {
-        color: #F92672;
-    }
+  body { background-color: #303030; color: #ddd; }
+  a { color: #66D9EF; text-decoration: none; }
+  a:hover { color: #000; background-color: #66D9EF; }
+  h1, h2, h3, h4, h5, h6 { color: #eee; }
+  #nav-bg, a#logo, #top-nav a { background-color: #A6E22E; color: #202020; }
+  .accent { color: #F92672; }
 }
+
+/* Print styles */
 
 @media print {
   #nav-bg, #logo, #top-nav { display: none; }
@@ -370,11 +229,14 @@ input[type=checkbox]:checked ~ .menu-label:after {
   body { background: none; }
   #content { max-width: none; }
   h1.title { text-align: center; }
-  h1, h2, h3, h4, h5, h6 { break-after: avoid-page; page-break-after: avoid; }
+  h1, h2, h3, h4, h5, h6 { page-break-after: avoid; }
   #content hr:last-of-type { display: none; }
-  #content pre { break-inside: avoid-page; page-break-inside: avoid; white-space: pre-wrap; }
+  #content pre { page-break-inside: avoid; white-space: pre-wrap; }
   #content div.small:last-of-type { display: none; }
-  a[href^="https://"]::after, a[href^="http://"]::after {
-    content: "("attr(href)")"; font-family: monospace; margin: 0 .25em;
+  a[href^="https://"]::after,
+  a[href^="http://"]::after {
+    content: "(" attr(href) ")";
+    font-family: monospace;
+    margin: 0 .25em;
   }
 }
